package ejercicio1.entrega1;

public interface Restaurante {
    void servirCliente();
}
