package ejercicio1.entrega1;

public class RestauranteDeLujo implements Restaurante {
    @Override
    public void servirCliente() {
        System.out.println("Sirviendo en restaurante de lujo.");
    }
}
