package ejercicio1.entrega1;

public class RestauranteRapido implements Restaurante {
    @Override
    public void servirCliente() {
        System.out.println("Sirviendo en restaurante rápido.");
    }
}
