package ejercicio1.entrega1;

public class RestauranteTematico implements Restaurante {
    @Override
    public void servirCliente() {
        System.out.println("Sirviendo en restaurante temático.");
    }
}
