package ejercicio1.entrega1.patronAdicional;

public interface EstrategiaServicio {
    void ejecutar();
}
