package ejercicio1.entrega1.patronAdicional;

public class EstrategiaServicioDeLujo implements EstrategiaServicio {
    @Override
    public void ejecutar() {
        System.out.println("Ofreciendo servicio de lujo.");
    }
}
