package ejercicio1.entrega1.patronAdicional;

public class EstrategiaServicioRapido implements EstrategiaServicio {
    @Override
    public void ejecutar() {
        System.out.println("Ofreciendo servicio rápido.");
    }
}
